Added further improvements to the further work part

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -242,13 +242,13 @@ is crucial for drivers to know that they are in the right place. In game design,
 glitches to prevent cheating. 
 
 While trying to close every seam may be appropriate in some areas, it can sometimes be futile to try and close every seam. The idea of
-seamful design was coined by Mark Weiser in his talk \emph{Creating the invisible interface}. \citep{weiser1994} argued
+\textbf{Seamful design} was coined by Mark Weiser in his talk \emph{Creating the invisible interface}. \citep{weiser1994} argued
 that we should find "Beautiful seams" which will let every system be "itself". Sometimes a user needs
 to be aware of the limitations of their device, for example, the estimated battery life on a phone or laptop screen. If we were
 to take a seamless approach by deciding not to show the battery life, we wouldn't know when to charge our phone. In the context of GPS, this usually means 
 to try and embrace the idea that GPS accuracy can vary based on the type of phone, the area you are in or the GPS clock error. For example 
 \emph{Treasure}, a game made by the University of Glasgow, had a coin collection mechanic where a player could pickup coins using their GPS 
-coordinates. However in order to keep their coins safe, they had to 'upload' their coin to a treasure chest. A
+coordinates. However, to keep their coins safe, they had to 'upload' their coin to a treasure chest. A
 task that they could only do if they had a WiFi connection in their location. \citep{Barkhuus2005}
 
 \section{Related Products}
@@ -259,15 +259,16 @@ games that used GPS as a core mechanic of the game.
 
 One of the first location games was \emph{Can you see me now? (CYSMN)} which was a mixed reality made by blast theory. \citep{canyouseeme} The
 game was played over two days. Three runners would run around the streets of Sheffield
-and Rotterdam. The goal of the runners was to catch players who were moving around in a virtual map. During the analysis of tactics displayed in the game,
+and Rotterdam. The goal of the runners was to catch players who were moving around on a virtual map. During the analysis of tactics displayed in the game,
 \cite{canyouseeme} mentioned that the runners would have large ranges in GPS error which meant that some of the online players would get
 caught without being able to see anything. Eventually, the runners were able to take advantage of low GPS areas and were able to hide in shadow
-areas.
+areas. Once that happened, the online players had to improve their tactics to ensure that they weren't caught.
 
-\emph{Treasure} was a location based game created by \cite{Barkhuus2005} from the University of Glasgow. This was another GPS game which involved
+The findings in \emph{CYSMN} inspired games that intentionally exposed the limitations in both GPS and WiFi. An example of this 
+is \emph{Treasure}, a game created by \cite{Barkhuus2005} from the University of Glasgow. This was another GPS game which involved
 collecting coins in a specific in a more open game area to ensure high GPS accuracy. The objective of the
 game was to collect as many coins as possible, while also being able to "pickpocket" other players to steal their
-coins. The pickpocketing worked by having a button that they pressed as they got close to another person. \cite{Barkhuus2005}
+coins. The pickpocketing worked by having a button that they pressed as they got close to another person. To keep your coins safe, you could upload your coins to a chest depending on whether you had a Wi-Fi connection or not. \cite{Barkhuus2005}
 found that one of the big tactics that people would have is that they would take advantage of the lag in GPS coordinates
 to pickpocket people from further away or to be able to get away from their victim quickly so they couldn't be
 pickpocketed themselves.
