Did some further improvements

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -174,7 +174,7 @@ have a lot more accuracy than in the past as the increase in satellites means th
 errors.
 
 For most modern smartphones, GPS is not the only way that they can get their location data.
-For instance both Apple and Google state in their privacy terms that they source their location from sources such as WiFi and mobile networks on
+For instance, both Apple and Google state in their privacy terms that they source their location from sources such as WiFi and mobile networks on
 top of GNSS systems. \citep{appleLocation, googleLocation}. This is mainly to help improve accuracy when in hard to reach areas
 such as indoor areas which can be useful for tracking location history. Another main reason is that sourcing your location entirely from GNSS systems can drain battery life due
 to the calculations needed to find the device's position \citep{brouwers2011detecting}. 
@@ -229,7 +229,7 @@ increases or decreases over time.
 
 \section{Seamless and Seamful Design}
 With most systems, there will be potential seams which can cause unintended results to the user. We can think of
-seams as a limitation in the way a system works. For example, a mobile phone is limited by its battery life or the phone
+a seam as a limitation in the way a system works. For example, a mobile phone is limited by its battery life or the phone
 signal when making calls \citep{chalmers2003seamful}. With GPS we can be limited by the various forms of errors described in section \ref{gpsInaccuracy}
 such as the lag between the signal leaving the satellite and reaching the sensor. When encountering seams in your system, there are two main
 approaches. These are known as \textbf{Seamless} or \textbf{Seamful} design.
@@ -273,12 +273,12 @@ found that one of the big tactics that people would have is that they would take
 to pickpocket people from further away or to be able to get away from their victim quickly so they couldn't be
 pickpocketed themselves.
 
-Both \emph{Can you see me now?} and \emph{Treasure} found seams in their game design. In the case of CYSMN it was the accuracy
-of the GPS coordinates, and in \emph{Treasure} it was the lag in GPS coordinates. While initially in both games they were seen
-to be a flaw but as they got used to the mechanics, they were able to take advantage of them. For example, several participants in 
-CYSMN stated that it was a "shame" that they were caught by a runner without seeing them. However, when the runners embraced the inaccuracies,
-it increased the stakes of the game. \citep{canyouseeme}. We also saw that in \emph{Treasure} where the players took 
-advantage of the lag between location updates to get away from their victims. When you expose seams to people, there can
+Both \emph{Can you see me now?} and \emph{Treasure} found seams in their game design. In the case of \emph{CYSMN} it was the accuracy
+of the GPS coordinates, and in \emph{Treasure} it was the lag in GPS coordinates and the Wi-Fi coverage. In \emph{CYSMN}, the ranges in GPS errors were initially seen
+to be a flaw in the hardware. \cite{canyouseeme} noted that there were problems in GPS accuracy even after upgrading the runner's sensors. However, after several rounds, the runners were able to take advantage of the GPS accuracy,
+heightening the stakes of the game in the process \citep{canyouseeme}. \emph{Treasure} on the other hand exposed seams
+in their game design which led to more interesting strategies. One example of this is where the players took 
+advantage of the lag between location updates to get away from their victims. \citep{Barkhuus2005} When you expose seams to people whether intentionally or not, there can
 be interesting ways that people exploit those seams to gain an advantage.
 
 Over the years, other creators have used GPS technology to create interesting game ideas. The third season of the popular
