Added more improvements

--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -241,8 +241,8 @@ case, it was important to work seamlessly as Uber's business model relies on peo
 is crucial for drivers to know that they are in the right place. In game design, seamless design is useful when there are significant balance issues. For example making sure to fix
 glitches to prevent cheating. 
 
-While trying to close every seam may be appropriate in some areas, it can sometimes be futile to try and close every seam. The idea of
-\textbf{Seamful design} was coined by Mark Weiser in his talk \emph{Creating the invisible interface}. \citep{weiser1994} argued
+While trying to close every seam may be appropriate in some areas, it can sometimes be futile. The idea of
+\textbf{Seamful design} was coined by Mark Weiser in his talk \emph{Creating the invisible interface}. \cite{weiser1994} argued
 that we should find "Beautiful seams" which will let every system be "itself". Sometimes a user needs
 to be aware of the limitations of their device, for example, the estimated battery life on a phone or laptop screen. If we were
 to take a seamless approach by deciding not to show the battery life, we wouldn't know when to charge our phone. In the context of GPS, this usually means 
