--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -257,7 +257,7 @@ task that they could only do if they had a WiFi connection in their location. \c
 Over the years there have been several games that utilise GPS coordinates as a fundamental part of the game. In this section, I go over various
 games that used GPS as a core mechanic of the game.
 
-One of the first location games was \emph{Can you see me now? (CYSMN)} which was a mixed reality made by blast theory. \citep{canyouseeme} The
+One of the first location games was \emph{Can you see me now? (CYSMN)} which was a mixed reality game made by blast theory. \citep{canyouseeme} The
 game was played over two days. Three runners would run around the streets of Sheffield
 and Rotterdam. The goal of the runners was to catch players who were moving around on a virtual map. During the analysis of tactics displayed in the game,
 \cite{canyouseeme} mentioned that the runners would have large ranges in GPS error which meant that some of the online players would get
