--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -393,7 +393,7 @@ the accuracy much either. I found that the best result for decreasing your GPS a
 under bridges or to go inside buildings. Using this information, I decided to pick the main building
 of Glasgow University. The main reason for this was that I found lots of shadows in that area. I figured
 that players had a lot of places to hide like the cloisters or the University chapel. I also felt that
-the area was small enough to keep the game exciting for shorter time periods.
+the area was small enough to keep the game exciting for shorter periods.
 
 \section{Requirements}
 Since this project is a game about exploring the ranges in GPS accuracies, I felt
@@ -427,7 +427,7 @@ areas greatly outnumbered the shadow areas.
 
 Once I had completed my brainstorming, I took the ideas that would be feasible to do and started to expand on the ideas a
 bit more. To do this I took a piece of A4 paper and filled it with ideas of particular Game Mechanics. This allowed me
-to form ideas of what kinds of games would be fun to play. Figure \ref{fig:idea1} shows an example of one of these sheets.
+to form ideas of what kinds of games would be fun to play. Figure \ref{fig:gameidea} shows an example of one of these sheets.
 As you can see they are rather rough but this exercise let me formulate the mechanics, the aims and the winning conditions.
 Also by drawing diagrams, I got better ideas of what the user interface would look like.
 
@@ -437,9 +437,9 @@ use and to start experimenting with them.
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.5\linewidth]{images/idea1.pdf} 
-    \caption{My rough paper draft of idea 1}
-    \label{fig:idea1}
+    \includegraphics[width=0.5\linewidth]{images/idea2.pdf} 
+    \caption{A rough paper draft for a manhunt game idea. I spent several minutes writing out some basic rules to expand my ideas.}
+    \label{fig:gameidea}
 \end{figure}
 
 \section{Overview}
@@ -460,15 +460,15 @@ be calculated as the person who was the runner for the most amount of time in to
 \label{phase1architecture}
 The game utilised a Client-Server Architecture with the client being a smartphone with a GPS or
 GNSS sensor. Several clients will be connected using a WebSocket. The smartphone will get the GPS data including the
-latitude, longitude and accuracy and then will process it and send it to the server. The location data will also be sent 
+latitude, longitude and error rating before sending it to the server. The location data will also be sent 
 to the UI where the user's overall position will be updated. Through the WebSocket, the phone will send the GPS data
 to the server which will save the user's location onto a geospatial database. Depending on certain conditions, the data
 will be sent to the rest of the clients.
 
 Since the clients of the game will be smartphones. I decided that the game will take a thin-client design with the
 server handling most of the game logic. This is due to the range of computational abilities of different phones. 
-I feel that a server will be able to handle lots more computations over time compared to the average smartphone.
-It also means that it is easier to keep track of who is the chaser, who has been caught and where they are on the map.
+I feel that a server will be able to handle a lot more computations over time compared to the average smartphone.
+It also means that it is easier to keep track of who the chaser is, who has been caught and where they are on the map.
 There will still be some features that will be implemented on the client, this includes a timer and the calculation of
 jail time. However, to ensure that no player has an unfair disadvantage, I will keep track of the game time on the
 server as well. This is so that we can keep the game in sync with other players.
@@ -478,13 +478,12 @@ server as well. This is so that we can keep the game in sync with other players.
 The smartphone app will be divided into four main components. These are the GPS Listener, the Communications area, the
 Player and the User Interface. When the client first connects to the server, it will give the user a player id and a player
 type. This information will be given to the player class which stores the id for any further communications with the server.
-Then once that is done, the GPS Listener will start to fetch the GPS coordinates every 2 seconds. This data is then sent
-to the User Interface so that the map is updated with the user's location. The GPS coordinates are then sent to the Communication
-class where they are sent to the server.
+Then once that is done, the GPS Listener will start to fetch the GPS coordinates every 1 to 2 seconds. These coordinates are then sent
+to the User Interface so that the map is updated with the user's location before being sent to the server.
 
 \subsection{Server and Database Design}
 As I mentioned in an earlier section, the game will have a thin-client design. As a result, a lot of the game logic and
-management was held on the server and my database. During the course of the game, I will only need two schemas. These
+management were held on the server and my database. During the course of the game, I will only need two schemas. These
 are the \textit{GPSShadows} schema and the \textit{players} schema. The \textit{GPSShadows} schema will store the latitude
 and longitude coordinates of all of the GPS shadows that I found during my analysis in chapter \ref{analysis}. The 
 \textit{players} schema will store the player's id, their GPS coordinates, their GPS accuracy and their player type which is
@@ -505,8 +504,8 @@ function and so it was not necessary to overcomplicate the design.
 \subsection{Communication between the client and the server}
 \label{communication}
 Since a lot of the game will have a lot of multiplayer features, it was important that the network side of the game
-was robust to ensure that no player would have an unfair advantage when playing the game. Some examples of messages that the server
-could give the user include:
+was robust to ensure that no player would have an unfair advantage when playing the game. Since I will be using a
+real-time communication system, I needed to design labels for various operations that I will need for the game. These operations are:
 
 \begin{itemize}
     \item \textbf{CONNECT} This message connects the user to the server. The server will then send over a user id.
