--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -482,6 +482,7 @@ Then once that is done, the GPS Listener will start to fetch the GPS coordinates
 to the User Interface so that the map is updated with the user's location before being sent to the server.
 
 \subsection{Server and Database Design}
+\label{databaseDesign}
 As I mentioned in an earlier section, the game will have a thin-client design. As a result, a lot of the game logic and
 management were held on the server and my database. During the course of the game, I will only need two schemas. These
 are the \textit{GPSShadows} schema and the \textit{players} schema. The \textit{GPSShadows} schema will store the latitude
@@ -659,10 +660,13 @@ Two of the most popular databases that would allow me to do that would be PostGI
 MongoDB which is a popular document-based database \citep{mongodb}. In the end, I decided to go with MongoDB since their API
 was easy to use and integrate into my server design. With MongoDB, I could use their GeoSpatial Processing with minimal setup. Also, it is significantly
 faster than PostGIS in processing proximity queries \citep{Bartoszewski2019}. This was especially important considering
-that I would be querying this database every time another player broadcasts their location.
+that I would be querying this database every time another player broadcasts their location. As I mentioned in section
+\ref{databaseDesign}, I had no need for a relational database design for this phase of development. Therefore MongoDB
+was the most suitable choice as its document-based design allowed me to customize the scope of my project. 
+
 
 \subsection{Mobile App}
-As mentioned in section \ref{designClient}, the client will interact with the game through a mobile app. After a lengthy
+As I mentioned in section \ref{designClient}, the client will interact with the game through a mobile app. After a lengthy
 analysis of different programming languages and frameworks that I could use, I finally settled on making a native Android
 app using the Kotlin programming language \citep{kotlin}. I chose to write my code in Koltin because it has a simple syntax
 and is now the recommended language for building android apps by Google. It also contains UI libraries such as Jetpack Compose 
@@ -742,13 +746,13 @@ getting the player to understand where they would be able to find GPS shadow spo
 
 \subsection{LocationWebSocket}
 During my development, I had to create many different Kotlin classes for my front end to work properly.
-One of the most important classes that I used was the LocationWebSocket class. The main purpose of this class is to set up a
+One of the most important classes that I created was the LocationWebSocket class. The main purpose of this class is to set up a
 real-time connection with the Server and to control the different UI components that directly rely on server-side communication.
 One of the big examples of this is the notification component. Whenever the server sends a message to the user, there will almost
 always be a "message" key which will store a string to display to the user. When the LocationWebSocket class receives a message, it 
 will start by getting the message and then it will display the message on the screen for 2 seconds.
 
-As the name suggests, the LocationWebSocket is also responsible in ensuring that the mobile app has a consistent connection to the
+As the name suggests, the LocationWebSocket is also responsible for ensuring that the mobile app has a consistent connection to the
 WebSocket. When developing my first true iteration of the game, I would notice that after 5 minutes of game time, 
 the app would disconnect giving me a "Failed" error (Please see section \ref{mongocollections} for more details on how I solved this problem on the server side). 
 Luckily the library that I used to handle WebSockets, the OkHttp client \citep{okhttp} has an
@@ -788,7 +792,7 @@ was going to get a lot harder to maintain my code if I kept going down that rout
 a new enumeration class called "WebSocketActions".
 
 The WebSocketActions enumeration class acts as a bridge between the LocationWebSocket class and several similarly
-structured classes that inherit features from a WebSocketOperation class. As figure \ref{fig:locationActions} shows, 
+structured classes that inherit features from an abstract class called WebSocketOperation. As figure \ref{fig:locationActions} shows, 
 whenever there is a message from the server, the type of the message is used to tell the actions class which operation
 class to build. Once the class has been found, we can then run an "execute" method to execute the operation that had
 to be done on each message.
