--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -165,8 +165,8 @@ satellites to find the intersection points. We usually need 3 to 4 satellites to
 
 \subsection{GPS in smartphones}
 These days most smartphones are fitted with a GPS sensor to allow for precise navigation. However, GPS is not the only GNSS
-system that smartphones use. Multiple countries have launched their own satellite positioning systems. For example, Russia has the GLONASS
-system, the European Space Agency has the GALILEO system and China has the Beidou system. Most modern smartphones make use
+system that smartphones use. Multiple countries have launched their own satellite positioning systems. Examples of these include, the Russian GLONASS system, the European Space Agency's GALILEO system 
+and the Chinese Beidou system. Most modern smartphones make use
 of some or all of these systems. For example my phone and the phone that I am testing this project on, the Samsung 
 Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. Much like GPS, each one of these GNSS satellites
 have between 24 and 30 satellites much like GPS \citep{Leick2015}. Therefore, a phone will actually be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
