--- a/dissertation/l4proj.tex
+++ b/dissertation/l4proj.tex
@@ -94,7 +94,7 @@ can disrupt a GPS signal, leading to a device's position being recorded in the w
 While these limitations of GPS can be seen as a source of frustration, it also leads to
 opportunities to exploit these limitations to gain the upper hand in a GPS-based game. One
 of the first instances of this was recorded by \cite{canyouseeme} when people started to 
-take advantage of drops in accuracy to evade capture during their Mixed Reality Game,
+take advantage of drops in GPS accuracy to evade capture during their Mixed Reality Game,
 \emph{Can you see me now?}. Building on top of that idea, several other games were 
 created using the idea of Seamful design, a concept first thought of by Mark Weiser in
 1994. In his talk, \cite{weiser1994} stated that instead of hiding most limitations in 
@@ -165,11 +165,8 @@ satellites to find the intersection points. We usually need 3 to 4 satellites to
 
 \subsection{GPS in smartphones}
 These days most smartphones are fitted with a GPS sensor to allow for precise navigation. However, GPS is not the only GNSS
-system that smartphones use. Multiple countries have launched their own satellite positioning systems. Examples of these include, the Russian GLONASS system, the European Space Agency's GALILEO system 
-and the Chinese Beidou system. Most modern smartphones make use
-of some or all of these systems. For example my phone and the phone that I am testing this project on, the Samsung 
-Galaxy S21 FE makes use of all of the above-mentioned GNSS systems \citep{samsungs21specs}. Much like GPS, each one of these GNSS satellites
-have between 24 and 30 satellites much like GPS \citep{Leick2015}. Therefore, a phone will actually be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
+system that smartphones use. Multiple countries have launched their own satellite positioning systems. For instance, the Samsung Galaxy S21 FE positions itself using the satellites from the Beidou, GALILEO and GLONASS systems as well as GPS. 
+\citep{samsungs21specs}. Much like GPS, each one of these GNSS systems has between 24 and 30 satellites \citep{Leick2015}. Therefore, in reality, a phone will be in sight of roughly 15 to 16 satellites rather than the usual 4. This means that phones can
 have a lot more accuracy than in the past as the increase in satellites means that there is less chance of there being big
 errors.
 
